array.island.Island.scala.error
Compilation error:
Island:9: error: not found: value concat
      liste2 = concat(list,dernier)
               ^Island:9: error: not found: value list
      liste2 = concat(list,dernier)
                      ^