array.island.Island.scala.code
var liste:Array[Int] = new Array[Int](0) 
var liste2 = new Array[Int](0)

def island(num:Array[Int]): Int = {
  for (i<-1 to num.length-1){
    if ((num(i+1) > num(i)) && (num(i) > 0)){
      var dernier = Array(num(i))
      liste2 = concat(list,dernier)
    }
  }
  return liste.length
}